added footer and js slideshow in the homepage

--- a/thehomepage.html
+++ b/thehomepage.html
@@ -23,5 +23,29 @@
             </nav>
         </div>
     </header>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 YAESU THE RADIO. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script>
+        // Automatic Slideshow 
+        var myIndex = 0;
+        carousel();
+
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            myIndex++;
+            if (myIndex > x.length) { myIndex = 1 }
+            x[myIndex - 1].style.display = "block";
+            setTimeout(carousel, 3000);
+        }
+    </script>
 </body>
 </html>
