--- a/thehomepage.html
+++ b/thehomepage.html
@@ -24,6 +24,31 @@
         </div>
     </header>
 
+        <!-- Product section -->
+        <section>
+            <div class="container">
+                <h1>Our Products</h1>
+                <div class="product-grid">
+                    <div class="product" onclick="showPrice('YAESU FT-411E Walkie Talkie', 'The set being sold is made up of original elements: - 2 YAESU FT 411 E walkie talkies - 2 batteries - 2 car adapters - 2 antennas - 2 leatherette covers - 1 battery charger Everything is in perfect condition because it has had very little use and works correctly.')">
+                        <div class="product-definition">YAESU FT-411E Walkie Talkie</div>
+                        <img src="walkie_talkie1.webp" alt="Walkie Talkie 1">
+                        <div class="product-title">Price: $200</div>
+                    </div>
+                    <div class="product" onclick="showPrice('VHF Aviation AM 8.33 kHz walkie-talkie Yaesu FTA-250L', 'The Yaesu FTA-250L is a transceiver for the VHF AM aviation band from 118 to 136Mhz, IPX5 and MIL-STD-810F approved for use in harsh environments with rain, splashes and projections. The new Yaesu FTA-250L aviation VHF handset is 8.33 kHz and 25 kHz compatible. An audio output of 700 mW ensures that radio calls are not lost even in noisy environments. The FTA-250 also includes a noise reduction function on reception and transmission.')">
+                        <div class="product-definition">VHF Aviation AM 8.33 kHz walkie-talkie Yaesu FTA-250L</div>
+                        <img src="walkie_talkie2.jpg" alt="Walkie Talkie 2">
+                        <div class="product-title">Price: $300</div>
+                    </div>
+                    <div class="product" onclick="showPrice('Yaesu FT-70D Walkie Talkie C4FM / FM Dual-Band', 'The Yaesu FT-7D walkie-talkie offers clear communication in FM and C4FM digital modes. With automatic mode selection, numeric ID display, and 700mW audio output, it ensures convenient and loud communication. Its compact design, robust features, and long battery life make it ideal for diverse applications.')">
+                        <div class="product-definition">Yaesu FT-70D Walkie Talkie C4FM / FM Dual-Band</div>
+                        <img src="walkie_talkie3.jpg" alt="Walkie Talkie 3">
+                        <div class="product-title">Price: $250</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
     <footer>
         <div class="container">
             <p>&copy; 2024 YAESU THE RADIO. All rights reserved.</p>
