Added immages in all the pages

--- a/thehomepage.html
+++ b/thehomepage.html
@@ -24,6 +24,24 @@
         </div>
     </header>
 
+            <!-- History section -->
+    <div class="display">
+        <section class="history-section">
+            <div class="container">
+                <div class="history-info">
+                    <h2>Our History</h2>
+                    <p>The walkie-talkie's history dates back to the 1930s when Canadian inventor Donald Hings developed a portable radio signaling device for bush pilots. In 1940, Motorola created the first handheld two-way radio, which they called the "Handie-Talkie," for military use during World War II. These early devices were bulky and had limited range.</p>
+                    <p>After the war, walkie-talkies became more compact and affordable, leading to their adoption in various industries like construction, public safety, and security. In the 1960s, advancements in transistor technology further miniaturized walkie-talkies, making them more practical for personal and commercial use.</p>
+                    <p>Since then, walkie-talkies have evolved significantly, with improvements in range, battery life, and features like encryption and text messaging. Today, they remain widely used in numerous applications, including outdoor recreation, event management, and emergency response.</p>
+                </div>
+                <div class="history-image">
+                    <img class="mySlides" src="pic5.jpeg" alt="Company History Image">
+                    <img class="mySlides" src="pics3.jpeg" alt="Company History Image">
+                    <img class="mySlides" src="pic4.jpeg" alt="Company History Image">
+                </div>
+            </div>
+        </section>
+
         <!-- Product section -->
         <section>
             <div class="container">
